--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,70 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  background-image: url("./img/sky.jpg");
+  background-size: cover;
+  background-position: bottom;
+  height: 100vh;
+}
+main {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  right: 0;
+  border: 1px solid black;
+  height: 80%;
+  width: 50%;
+  margin: 0 auto;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+h1 {
+  color: white;
+  padding-top: 25px;
+}
+.search-box {
+  width: 100%;
+}
+.search-bar {
+  background-color: rgba(255, 255, 255, 0.5);
+  border-radius: 20px;
+  border: none;
+  outline: none;
+  height: 50px;
+  width: 400px;
+  padding: 10px;
+  margin-top: 25px;
+  box-shadow: 7px 18px 28px -6px rgba(0, 0, 0, 0.55);
+  font-size: 20px;
+}
+.location-box .location {
+  color: red;
+  font-size: 35px;
+  font-weight: 500;
+  text-shadow: 2px 2px rgba(50, 50, 70, 0.5);
+  text-transform: uppercase;
+  margin-top: 20px;
+}
+.location-box .date {
+  margin-top: 10px;
+  color: #000;
+  font-size: 22px;
+  text-shadow: 1px 1px rgba(50, 50, 70, 0.5);
+}
+
+.weather-box .temp {
+  margin: 30px auto;
+  background-color: rgba(200, 200, 200, 0.5);
+  font-size: 75px;
+  padding: 15px 15px;
+}
+.weather-box .weather {
+  font-size: 25px;
+  margin-top: 20px;
 }
