--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,15 @@ h1 {
 .search-box {
   width: 100%;
 }
+.submit {
+  margin-left: 10px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.submit:hover {
+  border-radius: 3px;
+}
 .search-bar {
   background-color: rgba(255, 255, 255, 0.5);
   border-radius: 20px;
